deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockermule-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dockermule
  template:
    metadata:
      labels:
        app: dockermule
    spec:
      containers:
      - name: dockermule
        image: suprabhatcs/dockermule:77
        ports:
        - containerPort: 8082
      imagePullSecrets:
      - name: regcred
