ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockermule-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: gwtestingtest.info
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: dockermule-service
                port:
                  number: 8081
